WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34043
[GTK] When selection changes selections in other WebView are not collapsed
https://bugs.webkit.org/show_bug.cgi?id=34043
Summary
[GTK] When selection changes selections in other WebView are not collapsed
Martin Robinson
Reported
2010-01-23 12:27:54 PST
When the X11 selection changes, the selection in the WebView will collapse. If the new selection is in another WebView though, both selections will still be active. To reproduce: 1. In Epiphany, open two tabs. 2. Select some text in one tab. 3. Select some text in the next. 4. Note that the selection still exists in both tabs.
Attachments
Patch for this issue
(4.00 KB, patch)
2010-01-23 12:36 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-01-23 12:36:08 PST
Created
attachment 47275
[details]
Patch for this issue I've attached a patch for this issue which sends a bit more information to the clear callback.
Martin Robinson
Comment 2
2010-01-28 21:42:46 PST
kov raised some concerns over IRC that this might break tests that seek that verify that one selection can exist per-frame. This change doesn't actually "fix" that behavior. The selection will only be collapsed if it is in another WebView or another application. I think fixing this to work between frame might deserve another patch.
WebKit Commit Bot
Comment 3
2010-02-02 05:32:37 PST
Comment on
attachment 47275
[details]
Patch for this issue Clearing flags on attachment: 47275 Committed
r54230
: <
http://trac.webkit.org/changeset/54230
>
WebKit Commit Bot
Comment 4
2010-02-02 05:32:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug