2010-02-02  Martin Robinson  <martin.james.robinson@gmail.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] When selection changes selections in other WebView are not collapsed
        https://bugs.webkit.org/show_bug.cgi?id=34043

        Collapse the selection of a WebView even when the new selection owner is
        a new WebView.

        * WebCoreSupport/PasteboardHelperGtk.cpp:
        (WebKit::clearClipboardContentsCallback): Only clear the DataObject we are setting
        is not the same as the one referenced in this callback. Use the same behavior for
        collapsing the selection.
        (WebKit::PasteboardHelperGtk::writeClipboardContents): Instead of recording a boolean
        record the actual data used while writing to the clipboard.

Canonical link: https://commits.webkit.org/45574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54230 268f45cc-cd09-0410-ab3c-d52691b4dbfc